--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -11,6 +11,7 @@
 </ion-nav-bar>
 
 
+<div class="footer-shadow"></div>
 <ion-tabs class="tabs-stable tabs-icon-top">
 <ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 <ion-nav-view name="plan-tab"></ion-nav-view>
