--- a/www/partials/appointment/addappointment.html
+++ b/www/partials/appointment/addappointment.html
@@ -13,23 +13,23 @@
 			患者信息
 			</div>
 			<label class="item item-input  trial">
-				姓名:<input type="text" ng-model="name" disabled="disabled">
+				姓名:<input type="text" ng-model="patient.name" disabled="disabled">
 			</label>
 			<label class="item item-input">
-				年龄:<input type="text" ng-model="age" disabled="disabled">
+				年龄:<input type="text" ng-model="patient.age" disabled="disabled">
 			</label>
 			<label class="item item-input">
-				模块:<input type="text" ng-model="module" disabled="disabled">
+				模块:<input type="text" ng-model="patient.module" disabled="disabled">
 			</label>
 			<label class="item item-input">
-				预约简介:<input type="text" ng-model="Description" disabled="disabled">
+				预约简介:<input type="text" ng-model="patient.Description" disabled="disabled">
 			</label>
 		</div>
 		<div class="padding">
 			<button class="button  button-block button-primary button-stable"
 						 ng-click="agree()">同意</button>
 			<button class="button  button-block  button-primary button-stable"
-						ng-click="">暂不处理</button>
+						ng-click="cancel()">暂不处理</button>
 		</div>	
 	</ion-content>
 </ion-view>
