新增日程模块  安装了ui-calendar插件 Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/partials/individual/coach-home.html
+++ b/www/partials/individual/coach-home.html
@@ -50,6 +50,10 @@
           个人信息
         </span>
 
+        <span class="button button-block  icon ion-calendar" ng-click="onClickPersonalSchedule()" href='#/schedule'>
+          专员日程
+        </span>
+        
         <span class="button button-block  icon ion-gear-a" ng-click="onClickPersonalConfig()">
           设置
         </span>
