--- a/www/partials/individual/coach-schedule.html
+++ b/www/partials/individual/coach-schedule.html
@@ -37,17 +37,17 @@
 
 <div class ="calendar" ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources" calendar="calendar" ng-if = "loadingDone" disableTap></div>
 
-<div  ng-repeat = " item in events">
+<!-- <div  ng-repeat = " item in events"> -->
     <!-- <div class="item item-divider item-divider-calm">  </div> -->
     
    
 
-      <h2>{{item.title}}</h2>
-      <h2> {{item.start.getMonth() +1 }}-{{item.start.getDate()}} </h2>
+<!--       <h2>{{item.title}}</h2>
+      <h2> {{item.start.getMonth() +1 }}-{{item.start.getDate()}} </h2> -->
+<!-- 
+      {{ item.Description }} -->
 
-      {{ item.Description }}
-
-</div>
+<!-- </div> -->
 <!-- <div class="day" ng-repeat="(dayIndex, day) in calendar">
   <div class="item item-divider item-divider-calm">
     {{day.weekday}}
