--- a/www/partials/appointment/checkappointment.html
+++ b/www/partials/appointment/checkappointment.html
@@ -32,8 +32,15 @@
 			<div class="item item-divider ">
 				预约事项
 			</div>
+			<!-- <label class="item item-input trial item-select" ng-click="openModal()">
+				<div class="input-label">
+					预约时间
+				</div>
+				{{healthcoach.date}} {{healthcoach.time}}
+			</label> -->
 			<label class="item item-input">
-				预约时间:<input type="text" ng-model="healthcoach.Time" id="txt1" disabled="disabled">
+				预约时间:
+				<input type="text" id="txt1" ng-model="healthcoach.Time"  disabled="disabled" ng-click="openModal()">
 			</label>
 			<label class="item item-input">
 				预约地点:<input type="text" ng-model="healthcoach.Add" id="txt2" disabled="disabled">
@@ -49,3 +56,38 @@
 		</div>
 	</ion-content>
 </ion-view>
+<script id="my-modal4.html" type="text/ng-template">
+  <ion-modal-view>
+    <ion-header-bar class = "bar-positive">
+      <div class="button button-clear" ng-click = "onClickConfirm()">确认</div>
+      <h1 class="title">添加日程</h1>
+      <div class="button button-clear" ng-click = "onClickCancel()">取消 </div>
+    </ion-header-bar>
+    <ion-content class ="padding">
+      <div class ="calendar-modal"ui-calendar="uiConfig.calendar2" class="span8 calendar" ng-model="eventSources" ng-if = "loadingDone2" ></div>
+
+      <div class="item item-divider item-divider-calm"> 新增 </div> 
+
+
+
+  <label class="item item-input item-select">
+    <div class="input-label">
+      选择日期（未来30天）
+    </div>
+    <select ng-model = "data.selectedDate">
+      <option ng-repeat =  "item in datesOptions" >{{item.toLocaleDateString()}}</option>
+    </select>
+  </label>
+  <label class="item item-input item-select">
+    <div class="input-label">
+      选择时间
+    </div>
+    <select ng-model = "data.selectedTime">
+      <option selected>上午</option>
+      <option >下午</option>
+      <option >晚上</option>
+    </select>
+  </label>
+    </ion-content>
+  </ion-modal-view>
+</script>
