--- a/www/partials/addpatient/ModuleInfo.html
+++ b/www/partials/addpatient/ModuleInfo.html
@@ -3,12 +3,18 @@
   <ion-content>
     
       <ion-list>
-          <ion-item  ng-repeat='Module in ModuleInfo' href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}" ng-if="Module.Flag">
+<!--           <ion-item  ng-repeat='Module in ModuleInfo' href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}" ng-if="Module.Flag">
             <a class="item item-icon-right" href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}">
             	{{Module.ModuleName}}
 	           	<i class="icon ion-chevron-right icon-gray"></i>
 	        </a>
-          </ion-item>
+          </ion-item> -->
+         
+            <a ng-repeat='Module in ModuleInfo' class="item " href="#/addpatient/ModuleInfo/{{Module.ModuleCode}}" ng-if="Module.Flag">
+              {{Module.ModuleName}}
+           
+            </a>
+         
       </ion-list>
 
     <button ng-click="NextPage()" class="button button-block button-positive">下一步</button>
