--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -11,7 +11,7 @@
         <img src="{{patient.imageURL}}">
         <div class="row " >
           <div class="col-50"><h5>{{patient.name}}</h5></div>
-          <div class="col-50"><h6>{{patient.Age}}   {{patient.GenderText}}</h6></div>
+          <div class="col-50"><h6>{{patient.age}}   {{patient.GenderText}}</h6></div>
         </div>
         <p style="white-space:wrap" >“{{patient.Description | limitTo:10}}{{patient.Description.length>10?'&hellip;':''}}” <span style="font-size:0.65rem;font-style: italic">{{patient.ApplyTime}}</span></p>
         <p ng-if="!(patient.AppointmentStatus-1)"><span style="color:#444"><i class="icon ion-pie-graph"></i> {{patient.Module}} </span><span style="color:#fb6a1b"> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.AppointmentTime}}</span></span></p>
