--- a/www/partials/addpatient/newpatient.html
+++ b/www/partials/addpatient/newpatient.html
@@ -16,7 +16,7 @@
     <!-- <a class="button icon-right ion-chevron-right button-clear button-dark" ng-click="onClickForward()"></a> -->
 <!-- </ion-header-bar> -->
 	<ion-content>
-	<progress max="100" value="15"></progress>
+	<!-- <progress max="100" value="15"></progress> -->
 	
 	<div class="list">
 		<h4>手机号</h4>
