--- a/www/partials/managepatient/main.html
+++ b/www/partials/managepatient/main.html
@@ -12,7 +12,7 @@
 
 
 <div class="footer-shadow"></div>
-<ion-tabs class="tabs-stable tabs-icon-top">
+<ion-tabs class="tabs-color-active-positive tabs-icon-top">
 <ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 <ion-nav-view name="plan-tab"></ion-nav-view>
 </ion-tab>
