--- a/www/partials/managepatient/table.html
+++ b/www/partials/managepatient/table.html
@@ -37,7 +37,7 @@
 </ion-nav-view >
 
   <div class="footer-shadow"></div>
-<ion-tabs style="border-top:0px" class="tabs-stable tabs-icon-top">
+<ion-tabs class="tabs-color-active-positive tabs-icon-top">
 <ion-tab title="计划情况"  icon="ion-stats-bars " href="#/manage/plan">
 
 </ion-tab>
