--- a/www/partials/managepatient/tablelist.html
+++ b/www/partials/managepatient/tablelist.html
@@ -6,7 +6,7 @@
 </ion-nav-bar>
 <div class="footer-shadow"></div>
 <ion-content class="content-item-list"> 
-  <div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
+  <div style="padding:0 0 0 12px;background-color:#3d6399;margin:0;text-color:#FFFFFF"> 
     <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
   </div>
 <style>
