--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,7 +23,7 @@
 }
 .item h5 {
   font-size: 1.23rem;
-  color: #417D9A;
+  color: #3d6399;
 }
 
 /*.item-thumbnail-left img {
@@ -45,11 +45,11 @@ hr.list {
   border: 0; 
   height: 0.1px; 
   text-align: center;
-  /*color:#689f38;*/
-  background-image: -webkit-linear-gradient(left, #f0f0f0, #689f38, #f0f0f0);
-  background-image: -moz-linear-gradient(left, #f0f0f0, #689f38, #f0f0f0);
-  background-image: -ms-linear-gradient(left, #f0f0f0, #689f38, #f0f0f0);
-  background-image: -o-linear-gradient(left, #f0f0f0, #689f38, #f0f0f0); 
+  /*color:#3d6399;*/
+  background-image: -webkit-linear-gradient(left, #f0f0f0, #3d6399, #f0f0f0);
+  background-image: -moz-linear-gradient(left, #f0f0f0, #3d6399, #f0f0f0);
+  background-image: -ms-linear-gradient(left, #f0f0f0, #3d6399, #f0f0f0);
+  background-image: -o-linear-gradient(left, #f0f0f0, #3d6399, #f0f0f0); 
 }
 hr.list:after {
   content: '列表缓存';
@@ -60,7 +60,7 @@ hr.list:after {
   padding: 0px;
   margin:0;
   background: #F3F3F3;
-  color: #689f38;
+  color: #3d6399;
   font-size: 14px;
 }
 .processbar{
@@ -182,7 +182,7 @@ hr.list:after {
   display: block;
   /*-moz-box-shadow:0px 4px 5px #999;*/
   /*-webkit-box-shadow:0px 4px 5px #999;*/
-  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.35);
+  box-shadow: 0 2.5px 4.5px rgba(0, 0, 0, 0.35);
   /*box-shadow:0px 4px 5px #999;*/
   width: 100%;height:4px;
   background-color: transparent; 
@@ -195,7 +195,7 @@ hr.list:after {
 /*  -moz-box-shadow:0px 3px 4px #999;
   -webkit-box-shadow:0px 3px 4px #999;
   box-shadow:0px 3px 4px #999;*/
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 2px 3.5px rgba(0, 0, 0, 0.3);
   width: 100%;height:3px;
   background-color: transparent; 
 }
@@ -207,7 +207,7 @@ hr.list:after {
   /*-moz-box-shadow:0px -3px 4px #999;*/
   /*-webkit-box-shadow:0px -3px 4px #999;*/
   /*box-shadow:0px -3px 4px #999;*/
-  box-shadow: -1px -2px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: -1px -1.5px 3.5px rgba(0, 0, 0, 0.3);
   width: 100%;height:3px;
   background-color: transparent; 
 }
