--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -23,7 +23,7 @@
 <ion-content has-bouncing="false" class="content-item-list">
 
 
-	<div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF">	
+	<div style="padding:0 0 0 12px;background-color:#3d6399;margin:0">	
 		<h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
 	</div>
 
@@ -56,7 +56,7 @@
 			</ionic-datepicker>
 		</div>
 		<div class="col-25 ">
-			<button class="button button-block  button-balanced" ng-click="synclinicinfo()" >同步</button>
+			<button class="button button-block  button-assertive" ng-click="synclinicinfo()" >同步</button>
 		</div>
 	</div>
 
