--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -5,7 +5,7 @@
 </ion-nav-buttons>
 </ion-nav-bar>
 <ion-content has-bouncing="false"  class="content-item-list" scroll="true">
-<div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF"> 
+<div style="padding:0 0 0 12px;background-color:#3d6399;margin:0;text-color:#FFFFFF"> 
   <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
 </div>
 <div class="button-bar ">
@@ -37,10 +37,10 @@
 </div>
 <!-- <div style="height:10px" ></div> -->
 <div class="text-center" style="margin:0;font-size:0.8em">单位（血压：mmHg，心率：次/分钟，血糖：nmol/L）</div>
-<div style="text-align:center;background-color:#DDDDDD">    
-  <p style="color:#2894FF;font-size:16px" ng-if=before>计划已结束</p>
-  <p style="color:#2894FF;font-size:16px" ng-if=none>无计划进度信息</p>
-  <p style="color:#2894FF;font-size:16px" ng-if=now>计划进度{{process}}%，离结束还有{{undodays}}天</p>
+<div style="text-align:center">    
+  <p style="color:#e66767;font-size:16px" ng-if=before>计划已结束</p>
+  <p style="color:#e66767;font-size:16px" ng-if=none>无计划进度信息</p>
+  <p style="color:#e66767;font-size:16px" ng-if=now>计划进度{{process}}%，离结束还有{{undodays}}天</p>
 </div>
 </ion-content> 
 </ion-view>
