--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -8,7 +8,7 @@
 		</ion-nav-buttons>
 	</ion-nav-bar>
 	<ion-content has-bouncing="false">
-		<div style="padding:0 0 0 12px;background-color:#387ef5;margin:0;text-color:#FFFFFF">	
+		<div style="padding:0 0 0 12px;background-color:#3d6399;margin:0">	
 			<h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}  </h3>
 		</div>	
 		<div class="list">
