--- a/www/partials/managepatient/clinic.html
+++ b/www/partials/managepatient/clinic.html
@@ -23,9 +23,7 @@
 <ion-content has-bouncing="false" class="content-item-list">
 
 
-	<div style="padding:0 0 0 12px;background-color:#3d6399;margin:0">	
-		<h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
-	</div>
+	<div class="top-of-the-content">{{Name}}  {{gender}}  {{age}}</div>
 
 	<div class="row">
 		<div class="col-50">
