--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -5,9 +5,10 @@
 </ion-nav-buttons>
 </ion-nav-bar>
 <ion-content has-bouncing="false"  class="content-item-list" scroll="true">
-<div style="padding:0 0 0 12px;background-color:#3d6399;margin:0;text-color:#FFFFFF"> 
+<!-- <div style="padding:0 0 0 12px;background-color:#3d6399;margin:0;text-color:#FFFFFF"> 
   <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
-</div>
+</div> -->
+<div class="top-of-the-content">{{Name}}  {{gender}}  {{age}}</div>
 <div class="button-bar ">
   <a class="button" ng-style="mybuttonStyle" >依从率图</a>
   <a class="button"  href="#/Independent/table/tablelist"> 体征表</a> 
