--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,6 +25,13 @@
   font-size: 1.23rem;
   color: #3d6399;
 }
+.top-of-the-content{
+  padding:5px 0 5px 12px;
+  background-color:#3d6399;
+  margin:0;
+  color:#FFFFFF;
+  font-size:1.4em
+}
 
 /*.item-thumbnail-left img {
   padding:0 !important;
