--- a/www/partials/individual/coach-newpatients.html
+++ b/www/partials/individual/coach-newpatients.html
@@ -14,8 +14,8 @@
           <div class="col-50"><h6>{{patient.age}}   {{patient.GenderText}}</h6></div>
         </div>
         <p style="white-space:wrap" >“{{patient.Description | limitTo:10}}{{patient.Description.length>10?'&hellip;':''}}” <span style="font-size:0.65rem;font-style: italic">{{patient.ApplyTime}}</span></p>
-        <p ng-if="!(patient.AppointmentStatus-1)"><span style="color:#444"><i class="icon ion-pie-graph"></i> {{patient.Module}} </span><span style="color:#fb6a1b"> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.AppointmentTime}}</span></span></p>
-        <p ng-if="(patient.AppointmentStatus-1)"><span style="color:#444"><i class="icon ion-pie-graph"></i> {{patient.Module}} </span><span style="color:#689f38"> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.AppointmentTime}}</span></span></p>
+        <p ng-if="!(patient.AppointmentStatus-1)"><span style="color:#444"><i ng-if="patient.module" class="icon ion-pie-graph"></i> {{patient.Module}} </span><span style="color:#fb6a1b"> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.AppointmentTime}}</span></span></p>
+        <p ng-if="(patient.AppointmentStatus-1)"><span style="color:#444"><i ng-if="patient.module" class="icon ion-pie-graph"></i> {{patient.Module}} </span><span style="color:#689f38"> {{patient.AppointmentText}} <span style="font-style: italic">{{patient.AppointmentTime}}</span></span></p>
 <!--         <ion-option-button class="button-assertive"ng-click="onItemDelete($index)">
           <i class="icon ion-close-circled"></i>
         </ion-option-button> -->
