--- a/www/partials/managepatient/ModuleInfo.html
+++ b/www/partials/managepatient/ModuleInfo.html
@@ -16,9 +16,7 @@
     </ion-nav-buttons>
   </ion-nav-bar>
   <ion-content has-bouncing="false">
-    <div style="padding:0 0 0 12px;background-color:#3d6399;margin:0;text-color:#FFFFFF"> 
-    <h3 style="color:#FFFFFF;font-size:1.4em;padding-top:5px;margin:0;">{{Name}}  {{gender}}  {{age}}</h3>
-  </div>
+    <div class="top-of-the-content">{{Name}}  {{gender}}  {{age}}</div>
     <ion-list>    
       <!-- <ion-item  ng-repeat='Module in ModuleInfo' href="#/manage/ModuleInfo/{{Module.ModuleCode}}" ng-if="Module.Flag"> -->
 <!--         <a class="item item-icon-right">
