--- a/www/partials/addpatient/basicinfo.html
+++ b/www/partials/addpatient/basicinfo.html
@@ -19,7 +19,7 @@
 			<div class="item item-divider ">
 			个人基本信息
 			</div>
-			<label class="item item-input  trial">
+			<label class="item item-input">
 				手机号：<input type="text" ng-model="PhoneNo" disabled="disabled">
 			</label>
 			<label class="item item-input">
@@ -89,9 +89,6 @@
 					<label class="item item-input">
 						紧急联系人电话：<input type="text" ng-model="EmergencyContactPhoneNumber.Value">
 					</label>
-					<div class="item item-divider ">
-				
-			</div>
 	  			<p style="color:#FF0000">{{logStatus}}</p>
 	  			
 	  		
