--- a/www/partials/addpatient/clinicinfo.html
+++ b/www/partials/addpatient/clinicinfo.html
@@ -31,7 +31,7 @@
 
 	</div>
 		<div class="col-25 ">
-			<button class="button button-block button-balanced" ng-click="synclinicinfo()" >同步</button>
+			<button class="button button-block button-assertive" ng-click="synclinicinfo()" >同步</button>
 		</div>
 
 	</div>
