--- a/www/partials/addpatient/newpatient.html
+++ b/www/partials/addpatient/newpatient.html
@@ -18,13 +18,13 @@
 	<ion-content>
 	<!-- <progress max="100" value="15"></progress> -->
 	
-	<div class="list">
-		<h4>手机号</h4>
+	<div class="list item-list">
+		<div class ="item item-divider">手机号</div>
 		<div class="item item-input-inset">
     		<label class="item-input-wrapper">
       		<input type="tel" ng-model="PhoneNo.pn">
     		</label>
-    		<a class="button icon-left ion-checkmark button-dark"
+    		<a class="button icon-left ion-checkmark button-positive"
     			 ng-click="test()">注册</a>
   		</div>
   		<div class='row responsive-sm'>
