--- a/www/partials/managepatient/plan.html
+++ b/www/partials/managepatient/plan.html
@@ -33,7 +33,7 @@
     </div>
   </div>
 </div>
-<div ng-if='diaplaysm' style="text-align:center"><b>暂无数据</b></div>
+<div ng-if='diaplaysm' class="mono_font">暂无数据</div>
 <div  id='chartdiv3'  ng-style="suitstyle()">
 </div>
 <!-- <div style="height:10px" ></div> -->
