--- a/www/partials/managepatient/plan/create.html
+++ b/www/partials/managepatient/plan/create.html
@@ -4,7 +4,7 @@
 			<button class="button icon button-icon ion-android-home" ng-click="onClickBackward()"></button>
 		</ion-nav-buttons>
 		<ion-nav-buttons side="secondary">
-			<button class="button" ng-click="backtomain()" ng-if="isloaded">确定</button>
+			<button class="button icon button-icon ion-checkmark-round" ng-click="backtomain()" ng-if="isloaded"></button>
 		</ion-nav-buttons>
 	</ion-nav-bar>
 	<ion-content has-bouncing="false">
