--- a/www/partials/addpatient/ModuleInfoListDetail.html
+++ b/www/partials/addpatient/ModuleInfoListDetail.html
@@ -10,7 +10,7 @@
       <ion-list>
         <div ng-repeat='ModuleInfoListDetail in ModuleInfoList'>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='YesNoType'">
-            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input item-select" style="background-color:#F1F1F1;">
             <div class="input-label">
               {{ModuleInfoListDetail.ItemName}} :
             </div>
@@ -25,7 +25,7 @@
             <!-- <h2>{{ModuleInfoListDetail.Description}}</h2> -->
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px"  ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstHypertensionDrug'">
-            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
@@ -56,7 +56,7 @@
 
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstDiabetesDrug'">
-            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
@@ -98,7 +98,7 @@
             </label>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DrinkFrequency'">
-            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input item-select" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
