--- a/www/partials/addpatient/riskdetail.html
+++ b/www/partials/addpatient/riskdetail.html
@@ -51,7 +51,7 @@
       <div class="card" >
 
         <div class="item item-divider">
-          <h2>高血压风险描述<h2>
+          <h2>高血压风险描述</h2>
         </div>
         <div class="item item-text-wrap">
 
