--- a/www/partials/individual/coach-idupload.html
+++ b/www/partials/individual/coach-idupload.html
@@ -1,6 +1,6 @@
 <ion-view view-title="上传认证资料" hide-nav-bar="true">
 
-  <ion-header-bar >
+  <ion-header-bar class="bar bar-positive">
     <h1 class="title">上传认证资料</h1>
   </ion-header-bar>
 
