--- a/www/partials/individual/coach-personalinfo.html
+++ b/www/partials/individual/coach-personalinfo.html
@@ -1,9 +1,9 @@
 <ion-view view-title="个人信息" hide-nav-bar="true">
-  <ion-header-bar>
-    <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
+  <ion-header-bar class="bar bar-positive">
+    <button class="button button-icon icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
     <div class="h1 title">个人信息</div>
 
-        <button class="button button-icon icon ion-compose" ng-click="onClickSave()">保存</button>
+        <button class="button button-icon icon ion-checkmark-round" ng-click="onClickSave()"></button>
   </ion-header-bar>
 
 <!--   <ion-nav-bar class="bar-balanced nav-title-slide-ios7">
