--- a/www/partials/individual/coach-schedule.html
+++ b/www/partials/individual/coach-schedule.html
@@ -19,20 +19,20 @@
 <ion-view view-title="Calendar" hide-nav-bar="true">
 
 <ion-header-bar class="bar bar-positive">
-  <button class="button button-icon icon ion-arrow-left-a" ng-click="onClickBackward()">返回</button>
+  <button class="button button-icon icon ion-arrow-left-c" ng-click="onClickBackward()"></button>
   <div class="h1 title">个人日程</div>
-  <button class="button button-icon icon ion-plus" ng-click="onClickTest()"></button>
+  <!-- <button class="button button-icon icon ion-plus" ng-click="onClickTest()"></button> -->
 </ion-header-bar>
 
-<div class="bar bar-subheader 
+<!-- <div class="bar bar-subheader 
   item-input-inset bar-light">
   <label class="item-input-wrapper">
     <i class="icon ion-search placeholder-icon"></i>
     <input type="search" ng-model="query" placeholder="Search">
   </label>
-</div>
+</div> -->
 
-<ion-content class="has-subheader padding" >
+<ion-content class=" padding" >
 
 
 <div class ="calendar" ui-calendar="uiConfig.calendar" class="span8 calendar" ng-model="eventSources" calendar="calendar" ng-if = "loadingDone" disableTap></div>
