--- a/www/partials/managepatient/ModuleInfoListDetail.html
+++ b/www/partials/managepatient/ModuleInfoListDetail.html
@@ -11,7 +11,7 @@
       <ion-list>
         <div ng-repeat='ModuleInfoListDetail in ModuleInfoList'>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='YesNoType'">
-           <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+           <label class="item item-input item-select" style="background-color:#F1F1F1;">
             <div class="input-label">
               {{ModuleInfoListDetail.ItemName}} :
             </div>
@@ -26,7 +26,7 @@
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstHypertensionDrug'">
             <!-- <div> -->
-            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
@@ -52,7 +52,7 @@
             </div>          
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='Cm.MstDiabetesDrug'">
-            <label class="item item-input" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
@@ -88,7 +88,7 @@
             </label>
           </ion-item>
           <ion-item style="padding:0px 0px 10px 0px" ng-if="ModuleInfoListDetail.ParentCode==ListName&&ModuleInfoListDetail.OptionCategory=='DrinkFrequency'">
-            <label class="item item-input item-select" style="background-color:#F1F1F1;padding:3px 0px 2px 0px">
+            <label class="item item-input item-select" style="background-color:#F1F1F1;">
               <div class="input-label">
                 {{ModuleInfoListDetail.ItemName}} :
               </div>
