--- a/www/partials/managepatient/plan/taskList.html
+++ b/www/partials/managepatient/plan/taskList.html
@@ -5,13 +5,13 @@
 			</a>
 		</ion-nav-buttons>
 		<ion-nav-buttons side="secondary">
-			<button class="button" ng-click="onClickBackward()" ng-if="isloaded">确定</button>
+			<button class="button button-icon ion-checkmark-round" ng-click="onClickBackward()" ng-if="isloaded"></button>
 		</ion-nav-buttons>
 	</ion-nav-bar>	
 	<div class="bar-shadow"></div>
 	<ion-content>	
 
-		<div style="font-size:15px;color:blue; padding:10px;text-align:center; font-weight:bold">
+		<div class="mono_font">
 		结束日期
 		</div>
 		<label class="item item-input">
@@ -19,7 +19,7 @@
 			<input type="date" ng-model="TaskList.EndDate" ng-change = "SetEndDate()">
 		</label>
 
-		<div style="font-size:15px;color:blue; padding:10px;text-align:center; font-weight:bold">
+		<div class="mono_font">
 		预期目标
 		</div>			
 		
@@ -43,7 +43,7 @@
 			<input type="text" ng-model = "TaskList.Weight" ng-blur="SetTarget('Weight')">
 		</label>		
 		
-		<div style="font-size:15px;color:blue;padding:10px;text-align:center; font-weight:bold">
+		<div class="mono_font">
 		任务
 		</div>
 				
